--- a/company_home/src/components/layout.css
+++ b/company_home/src/components/layout.css
@@ -1,11 +1,12 @@
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
+
 :root {
   --border-radius: 4px;
   --color-text: #333;
   --color-primary: #7026b9;
   --color-code-bg: #fff4db;
   --color-code: #8a6534;
-  --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  --font-sans: "Pretendard";
   --font-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
     "Courier New", monospace;
   --font-lg: 18px;
@@ -32,6 +33,8 @@ html {
   font-size: var(--font-md);
   line-height: var(--line-height-normal);
   overflow-y: scroll;
+  overflow-x: hidden;
+  background-color: #FFF;
 }
 body {
   -moz-osx-font-smoothing: grayscale;
@@ -40,8 +43,11 @@ body {
   font-family: sans-serif;
   font-family: var(--font-sans);
   font-weight: normal;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 1900px;
   word-wrap: break-word;
+  overflow-x: hidden;
+  background-color: #FFF;
 }
 a {
   background-color: transparent;
