--- a/company_home/src/components/layout.css
+++ b/company_home/src/components/layout.css
@@ -1,4 +1,5 @@
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
+@import './gatsby-announcer.css';
 
 :root {
   --border-radius: 4px;
@@ -35,6 +36,7 @@ html {
   overflow-y: scroll;
   overflow-x: hidden;
   background-color: #FFF;
+  margin-top: 0;
 }
 body {
   -moz-osx-font-smoothing: grayscale;
@@ -43,7 +45,7 @@ body {
   font-family: sans-serif;
   font-family: var(--font-sans);
   font-weight: normal;
-  margin: 0 auto;
+  margin: 0 !important;
   max-width: 1900px;
   word-wrap: break-word;
   overflow-x: hidden;
