--- a/company_home/src/components/layout.css
+++ b/company_home/src/components/layout.css
@@ -45,8 +45,8 @@ body {
   font-family: sans-serif;
   font-family: var(--font-sans);
   font-weight: normal;
-  margin: 0 !important;
-  max-width: 1900px;
+  margin: 0 auto !important;
+  max-width: 100vw;
   word-wrap: break-word;
   overflow-x: hidden;
   background-color: #FFF;
