--- a/company_home/src/components/layout.css
+++ b/company_home/src/components/layout.css
@@ -185,7 +185,7 @@ li > p {
   margin-bottom: calc(var(--space-4) / 2);
 }
 p {
-  max-width: 680px;
+  max-width: 90vw;
 }
 code {
   font-size: 0.875rem;
