--- a/src/components/subheader.module.css
+++ b/src/components/subheader.module.css
@@ -22,7 +22,7 @@
   text-align: left;
 }
 
-.inner h1 {
+.title {
   margin: 0;
   color: #FDFDFD;
   font-size: 40px;
@@ -31,7 +31,7 @@
   letter-spacing: -2px;
 }
 
-.inner p {
+.description {
   color: rgba(253, 253, 253, 0.60);
   font-size: 20px;
   font-weight: 600;
@@ -40,14 +40,16 @@
   white-space: nowrap;
 }
 
+
 @media (max-width: 1000px) {
   .contentPadding {
     padding: 110px 20px 40px 24px;
   }
-  .inner h1 {
+
+  .title {
     font-size: 32px;
   }
-  .inner p {
+  .description {
     font-size: 16px;
     white-space: normal;
   }
