feature: Update container max width to 1920px in main page

--- a/src/pages/company/jhaion-background.module.css
+++ b/src/pages/company/jhaion-background.module.css
@@ -26,8 +26,17 @@
   border-radius: inherit; /* ensure corners clip in all browsers */
 }
 
+
+.brForPC {
+  display: block;
+}
+
 @media (max-width: 768px) {
   .container {
     padding: 40px 20px;
+  }
+
+  .brForPC {
+    display: none;
   }
 }
