--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -46,14 +46,21 @@
 }
 
 .logo {
-  width: 125px;
-  height: 36px;
-  aspect-ratio: 125/36;
+  width: 53px;
+  height: 100%;
 }
 
 .logoLink {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   text-decoration: none;
-  display: block;
+}
+
+.logoLink img {
+  margin: 0;
 }
 
 /* Nav panel desktop-only */
