--- a/src/components/template/SectionTitle.module.css
+++ b/src/components/template/SectionTitle.module.css
@@ -39,3 +39,22 @@
   line-height: 1.4;
 }
 
+@media (max-width: 768px) {
+  .title {
+    font-size: 32px;
+  }
+
+  .description {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 500px) {
+  .title {
+    font-size: 28px;
+  }
+
+  .description {
+    font-size: 20px;
+  }
+}
