--- a/src/pages/company/vision-mission.module.css
+++ b/src/pages/company/vision-mission.module.css
@@ -144,3 +144,13 @@ section {
     right: 40px;
   }
 }
+
+@media (max-width: 500px) {
+  .valueTitle {
+    font-size: 24px;
+  }
+
+  .valueDescription {
+    font-size: 20px;
+  }
+}
