--- a/src/pages/press.module.css
+++ b/src/pages/press.module.css
@@ -1,9 +1,9 @@
 .container {
+  box-sizing: border-box;
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
-  padding: 80px 60px 80px 60px;
-  backround: yellow;
+  padding: 80px 120px 80px 120px;
 }
 
 .title {
@@ -71,11 +71,13 @@
   font-weight: 600;
   line-height: 1.4;
   letter-spacing: -1.5px;
-  overflow: hidden;
   text-align: left;
-  text-overflow: ellipsis;
-  white-space: wrap;
+  white-space: normal;
   word-break: keep-all;
+  overflow-wrap: anywhere;
+  flex: 1;
+  min-width: 0;
+  margin: 0;
 }
 
 .pressDate {
@@ -86,8 +88,12 @@
   letter-spacing: -1px;
 }
 
+.brForMobile {
+  display: none;
+}
+
 @media (max-width: 1024px) {
-  .pressContainer {
+  .container {
     padding: 40px;
   }
 
@@ -109,3 +115,24 @@
   }
 }
 
+@media (max-width: 768px) {
+  .press {
+    padding: 20px 0;
+  }
+
+  .pressThumbnail {
+    display: none;
+  }
+
+  .pressDetail {
+    position: relative;
+  }
+
+  .pressDetail h3 {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 24px;
+  }
+}
