--- a/src/components/template/CircleRightIconWithFlex.module.css
+++ b/src/components/template/CircleRightIconWithFlex.module.css
@@ -9,3 +9,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 768px) {
+  .imageContainer img {
+    transform: rotate(90deg);
+  }
+}
