--- a/src/pages/company/vision-mission.module.css
+++ b/src/pages/company/vision-mission.module.css
@@ -110,6 +110,28 @@ section {
   letter-spacing: -1px;
 }
 
+.videoBox {
+  display: flex;
+  gap: 40px;
+  flex-direction: column;
+}
+
+.video {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  max-height: 800px;
+  aspect-ratio: 16 / 9;
+}
+
+.videoIframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 20px;
+}
+
 @media (max-width: 768px) {
   .container {
     padding: 40px 20px;
