--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -44,8 +44,8 @@
   position: relative;
   border-radius: 20px;
   background-color: #fff;
-  background-size: cover;
-  background-position: center;
+  background-size: contain;
+  background-position: right;
   background-repeat: no-repeat;
   padding-left: 60px;
   display: flex;
@@ -439,24 +439,6 @@
   display: flex;
   align-items: stretch;
   margin: 0;
-}
-
-/* Inner card that actually has the rounded corners, bg image, and shadow */
-.heroCard {
-  position: relative;
-  border-radius: 20px;
-  background-color: #fff;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 0 60px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  text-align: left;
-  box-shadow: 2px 4px 20px 0 rgba(49, 78, 152, 0.12);
 }
 
 .heroSlideInner {
