--- a/src/templates/press-detail.module.css
+++ b/src/templates/press-detail.module.css
@@ -35,6 +35,9 @@ hr {
 }
 
 .pressContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
   padding: 40px 0;
 }
 
@@ -44,6 +47,23 @@ hr {
   max-width: 720px;
   height: auto;
   object-fit: contain;
+}
+
+.detailBodyWrap {
+  /* padding: 0 320px; */
+  display: flex;
+  max-width: 1280px;
+  padding: 0 clamp(24px, 10vw, 320px);
+}
+
+.detailBodyWrap p {
+  max-width: 100%;
+}
+
+@media (max-width: 1000px) {
+  .detailBodyWrap {
+    padding: 0;
+  }
 }
 
 @media (max-width: 768px) {
