fix: Separate hero section card background image / gradient
* 기존 수정사항 중 모바일 사이즈 내용 삭제
* main-1~3.png 이미지와 그라디언트 분리, 그라디언트는 css로 적용
* main-3..png 파일의 오타(.) 수정

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -44,8 +44,8 @@
   position: relative;
   border-radius: 20px;
   background-color: #fff;
-  background-size: cover;
-  background-position: right;
+  background-size: 100%, auto 100%;
+  background-position: left, right;
   background-repeat: no-repeat;
   padding-left: 60px;
   display: flex;
@@ -396,8 +396,6 @@
 
 @media (max-width: 360px) {
   .heroCard {
-    background-size: auto 100%;
-    background-position: right;
     padding-left: 24px;
   }
 }
