fix: Change hero card gradient width

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -44,7 +44,7 @@
   position: relative;
   border-radius: 20px;
   background-color: #fff;
-  background-size: 100%, auto 100%;
+  background-size: 100% 698px, auto 100%;
   background-position: left, right;
   background-repeat: no-repeat;
   padding-left: 60px;
