--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -248,6 +248,10 @@
   -ms-overflow-style: none;
   width: 100vw;
   max-width: 100vw;
+  /* Improve pointer/touch interactions */
+  touch-action: pan-y pinch-zoom;
+  user-select: none;
+  cursor: grab;
 }
 .solutionLink {
   text-decoration: none;
