--- a/src/components/subheader.module.css
+++ b/src/components/subheader.module.css
@@ -25,6 +25,7 @@
 .title {
   margin: 0;
   color: #FDFDFD;
+  font-family: "NanumGothic";
   font-size: 40px;
   font-weight: 700;
   line-height: 1.4;
