--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -70,6 +70,7 @@
 .heroTitle1 {
   color: #17181B;
   margin-bottom: 10px;
+  font-family: "NanumGothic";
   font-size: 48px;
   font-weight: 650;
   line-height: 1.1;
@@ -79,6 +80,7 @@
 .heroTitle2 {
   color: #177D3C;
   margin-bottom: 30px;
+  font-family: "NanumGothic";
   font-size: 48px;
   font-weight: 650;
   line-height: 1.1;
@@ -214,6 +216,7 @@
   color: #17181B;
   text-align: left;
   margin-bottom: 0;
+  font-family: "NanumGothic";
   font-size: 48px;
   font-weight: 700;
   line-height: 1.4;
@@ -674,17 +677,17 @@
 .ctaTitle {
   margin: 0;
   color: #17181B;
-  font-family: 'NanumGothic';
+  font-family: 'NanumGothic', sans-serif;
   font-size: 40px;
   font-weight: 700; /* font-medium */
   letter-spacing: -2px;
   line-height: 1.4; /* leading-tight */
 }
 .ctaEmphasis {
-  color: #16a34a; /* text-green-600 */
+  color: #177D3C;
 }
 .ctaDescription {
-  font-family: 'NanumGothic';
+  font-family: 'Pretendard', sans-serif;
   font-size: 24px;
   font-weight: 600;
   line-height: 1.4;
@@ -692,14 +695,14 @@
   color: #757B82;
 }
 .ctaButton {
-  font-family: 'NanumGothic';
+  font-family: 'Pretendard', sans-serif;
   display: inline-flex;
   justify-content: center;
   align-items: center;
   gap: 8px;
   height: 46px;
   padding: 12px 20px;
-  background-color: #16a34a; /* bg-green-600 */
+  background-color: #177D3C;
   color: #fff;
   font-size: 16px;
   font-weight: 500;
