--- a/src/pages/projects.module.css
+++ b/src/pages/projects.module.css
@@ -37,6 +37,7 @@
 .projectTitle {
   margin-bottom: 20px;
   color: #17181B;
+  font-family: "NanumGothic";
   font-size: 40px;
   font-weight: 700;
   line-height: 1.4;
