--- a/src/pages/press.module.css
+++ b/src/pages/press.module.css
@@ -10,6 +10,7 @@
   margin: 0;
   margin-bottom: 20px;
   color: #17181B;
+  font-family: "NanumGothic";
   font-size: 40px;
   font-weight: 700;
   line-height: 1.4;
