--- a/src/components/template/JourneyTextAnimation.module.css
+++ b/src/components/template/JourneyTextAnimation.module.css
@@ -1,10 +1,13 @@
 .interaction {
-  width: 100%;
   display: flex;
+  width: 100vw;
+  height: 682px;
+  max-width: 100vw;
+  padding: 176px 120px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 28px 16px 40px;
+  gap: 80px;
 }
 
 
@@ -13,6 +16,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+}
+
+.titleBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6px;
+  align-self: stretch;
 }
 
 .slogan .title {
@@ -21,10 +33,10 @@
   font-weight: 700;
   line-height: 1.4;
   letter-spacing: -2px;
+  margin: 0;
 }
 
 .slogan h2 {
-  margin-bottom: 20px;
   text-align: center;
   font-feature-settings: 'liga' off, 'clig' off;
   background: linear-gradient(90deg, #66E695 40.47%, #177D3C 59.58%);
@@ -38,7 +50,6 @@
 }
 
 .slogan h3 {
-  margin-bottom: 80px;
   color: #FDFDFD;
   font-size: 24px;
   font-weight: 400;
@@ -55,9 +66,7 @@
 }
 
 .copylightWrapper {
-  display: grid;
-  grid-template-columns: auto 0fr;
-  grid-template-rows: 1em;
+  display: flex;
   align-items: center;
   animation: text-fade 1.5s .5s cubic-bezier(0.25, 1, 0.5, 1) forwards;
 }
@@ -66,9 +75,9 @@
   color: #4A4F55;
   font-size: 56px;
   font-style: normal;
-  line-height: 1;
-  font-weight: 300;
+  line-height: 100%;
   letter-spacing: -0.5px;
+  margin: 0;
 }
 
 .highlightedCopylight {
@@ -122,6 +131,10 @@
 }
 
 @media (max-width: 768px) {
+  .interaction {
+    padding: 108px 40px; /* 임시 */
+  }
+
   .slogan {
     text-align: center;
   }
