style: complete initial responsive layout for MainPage, Header, Footer, and Sidebar

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -355,3 +355,13 @@
     display: block;
   }
 }
+
+@media (max-width: 450px) {
+  .header {
+    padding: 14px 0 0 0
+  }
+
+  .inner {
+    padding: 0 20px;
+  }
+}
