--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -148,26 +148,46 @@
 
 
 @media (max-width: 900px) {
-    .container {
-        padding: 40px;
-    }
+  .container {
+      padding: 40px;
+  }
 
-    .topBar {
-        flex-direction: column;
-        gap: 40px;
-    }
+  .topBar {
+      flex-direction: column;
+      gap: 40px;
+  }
 
-    .leftCol {
-        width: 100%;
-    }
+  .leftCol {
+      width: 100%;
+  }
 
-    .rightCol {
-        width: 100%;
-        justify-content: flex-start;
-        padding-left: 0;
-    }
+  .rightCol {
+      width: 100%;
+      justify-content: flex-start;
+      padding-left: 0;
+  }
 
-    .br {
-        display: block;
-    }
+  .br {
+      display: block;
+  }
+}
+
+@media (max-width: 768px) {
+  .logoImg {
+    margin: 0;
+  }
+
+  .topBar {
+    padding-bottom: 40px;
+  }
+
+  .section {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 450px) {
+  .container {
+    padding: 40px 20px;
+  }
 }
