--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -284,12 +284,16 @@
   text-align: left;
 }
 .linkCardTitle {
+  display: -webkit-box;
   margin: 0;
   color: #17181B;
   font-size: 24px;
   font-weight: 600;
   line-height: 1.4;
   letter-spacing: -1.5px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .linkCardDescription {
   margin-bottom: 0;
@@ -312,12 +316,6 @@
   height: 40px;
   background: linear-gradient(to bottom, #FDFDFD, rgba(253, 253, 253, 0.00));
   z-index: var(--z-index-level-100);
-}
-.cardImg {
-  width: 100%;
-  height: 100%;
-  display: block;
-  object-fit: cover;
 }
 
 /* Dot Navigation common */
@@ -537,10 +535,11 @@
 }
 .cardImg {
   width: 100%;
-  height: 100%;
+  height: 225px;
   display: block;
   object-fit: cover;
   border-radius: 0 0 8px 8px;
+  margin: 0;
 }
 
 /* Dot Navigation common */
@@ -922,9 +921,10 @@
 
   .solutionsSection,
   .pressSection {
-    height: 768px;
-    padding: 40px 40px 0;
+    height: 100svh;
+    min-height: 768px;
     margin-top: 40px;
+    padding: 40px 40px 0;
   }
 
   .linkCardSectionHeader .title {
@@ -1047,7 +1047,8 @@
 
   .solutionsSection,
   .pressSection {
-    height: 600px;
+    height: 100svh;
+    min-height: 640px;
     margin-top: 40px;
     padding: 0 24px;
   }
