style: complete first pass responsive styling for company subpages

--- a/src/components/template/CircleRightIconWithFlex.module.css
+++ b/src/components/template/CircleRightIconWithFlex.module.css
@@ -11,6 +11,10 @@
 }
 
 @media (max-width: 768px) {
+  .imageContainer {
+    align-items: normal;
+  }
+
   .imageContainer img {
     transform: rotate(90deg);
   }
