--- a/src/components/template/PlusIconWithFlex.module.css
+++ b/src/components/template/PlusIconWithFlex.module.css
@@ -9,3 +9,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 768px) {
+  .plusImageContainer {
+    align-items: normal;
+  }
+}
