--- a/src/components/template/SectionTitle.module.css
+++ b/src/components/template/SectionTitle.module.css
@@ -28,7 +28,7 @@
 .headingWrap {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 20px;
 }
 
 .sectionLabel {
@@ -47,6 +47,7 @@
 
   .description {
     font-size: 20px;
+    margin-bottom: 40px;
   }
 }
 
@@ -56,6 +57,6 @@
   }
 
   .description {
-    font-size: 20px;
+    font-size: 17px;
   }
 }
