--- a/src/templates/press-detail.module.css
+++ b/src/templates/press-detail.module.css
@@ -56,6 +56,10 @@ hr {
 
 .detailBodyWrap p {
   max-width: 100%;
+  color: #2E3236;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 140%;
 }
 
 .pager {
@@ -98,10 +102,24 @@ hr {
 
 @media (max-width: 768px) {
   .container {
-    padding: 40px 20px;
+    padding: 40px;
   }
 
   .pagerBtnBox {
     gap: 10px;
-  }  
+  }
+
+  .title {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 450px) {
+  .container {
+    padding: 40px 24px ;
+  }
+
+  .title {
+    font-size: 28px;
+  }
 }
