--- a/src/components/template/DescriptionCard.module.css
+++ b/src/components/template/DescriptionCard.module.css
@@ -16,6 +16,7 @@
   border: 1px solid var(--dc-gray-border);
   border-radius: 20px;
   color: var(--dc-text);
+  flex: 1;
 }
 
 img.descriptionCardImage {
